infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-auth
  template:
    metadata:
      labels:
        app: chat-auth
    spec:
      containers:
        - name: chat-auth
          image: denismaxim0v/chat-auth
---
apiVersion: v1
kind: Service
metadata:
  name: chat-auth-srv
spec:
  selector:
    app: chat-auth
  ports:
    - name: chat-auth
      protocol: TCP
      port: 3000
      targetPort: 3000
