infra/k8s/auth-redis-depl.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: auth-redis
spec:
  selector:
    matchLabels:
      app: auth-redis
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-redis
        role: master
        tier: backend
    spec:
      containers:
      - name: auth-redis
        image: redis  # or just image: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: auth-redis
spec:
  selector:
    app: auth-redis
  ports:
    - port: 6379
      targetPort: 6379
