infra/k8s/chat-srv-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-srv-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-srv
  template:
    metadata:
      labels:
        app: chat-srv
    spec:
      containers:
        - name: chat-srv
          image: denismaxim0v/chat-srv
---
apiVersion: v1
kind: Service
metadata:
  name: chat-srv-srv
spec:
  selector:
    app: chat-srv
  ports:
    - name: chat-srv
      protocol: TCP
      port: 3000
      targetPort: 3000
