infra/k8s/users-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-users-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-users
  template:
    metadata:
      labels:
        app: chat-users
    spec:
      containers:
        - name: chat-users
          image: denismaxim0v/chat-users
---
apiVersion: v1
kind: Service
metadata:
  name: chat-users-srv
spec:
  selector:
    app: chat-users
  ports:
    - name: chat-users
      protocol: TCP
      port: 3000
      targetPort: 3000
