infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/issuer: "letsencrypt-production"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: chatapp.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            backend:
              serviceName: chat-auth-srv
              servicePort: 3000
          - path: /api/users/?(.*)
            backend:
              serviceName: chat-users-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
